--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nats-jwt"
-version = "0.1.1.dev2"
+version = "0.0.0"
 description = "JWT tokens signed using NKeys for Ed25519 for the Python3 ecosystem"
 authors = ["pomo <mark.barzali@firma.seznam.cz>"]
 license = "Apache-2.0 license"
