--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "nats-jwt"
 version = "0.0.0"
 description = "JWT tokens signed using NKeys for Ed25519 for the Python3 ecosystem"
-authors = ["pomo <mark.barzali@firma.seznam.cz>"]
+authors = ["Seznam.cz, a.s. <doporucovani-vyvoj@firma.seznam.cz>"]
 license = "Apache-2.0 license"
 readme = "README.md"
 packages = [{include = "nats_jwt"}]
