tests: tox setup for github actions

--- a/tox.ini
+++ b/tox.ini
@@ -10,3 +10,11 @@ commands =
     poetry run coverage run -m pytest {posargs:-vv}
     poetry run coverage xml -o {env:PYTEST_COVERAGE:coverage.xml}
     poetry run coverage report --show-missing
+
+[gh]
+python =
+    # currently unsupported due to ed25519 dependency (configparser)
+    # 3.12 = py312
+    3.11 = py311, type
+    3.10 = py310
+    3.9 = py39
