--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,7 +11,8 @@ jobs:
       fail-fast: false
       matrix:
         py:
-          - "3.12"
+          # currently unsupported due to ed25519 dependency (configparser)
+          # - "3.12"
           - "3.11"
           - "3.10"
           - "3.9"
@@ -23,6 +24,8 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.py }}
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
       - name: Install tox
         run: python -m pip install tox-gh>=1.2
       - name: Setup test suite
