ci: propagate commitzen result into release job
(cherry picked from commit 8dfa7eadac98da0f6735b9a555439759f08cec0d)

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -21,13 +21,15 @@ jobs:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       - name: Print Version
         run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
+    outputs:
+      outcome: ${{ steps.cz.outcome }}
+      conclusion: ${{ steps.cz.conclusion }}
 
   release:
     # if a bump version failed or was not executed, do not release
     needs: bump_version
     runs-on: ubuntu-latest
-    if: |
-      needs.bump_version.steps.cz.outcome == 'success' && needs.bump_version.steps.cz.conclusion == 'success'
+    if: needs.bump_version.outputs.outcome == 'success' || needs.bump_version.outputs.conclusion == 'success'
     steps:
     - name: Install Poetry
       uses: snok/install-poetry@v1
