--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,10 +1,12 @@
 on:
-  push:
-    branches: [main]
+  pull_request:
+    branches:
+      - main
+    types: [closed]
 
 jobs:
   bump_version:
-    if: "!startsWith(github.event.head_commit.message, 'bump:')"
+    if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
     steps:
