--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -1,22 +1,21 @@
 on:
-  pull_request:
+  push:
     branches:
-      - main
-    types: [closed]
+      - release
 
 name: Bump version and create changelog
 
 jobs:
   bump_version:
-    if: ${{ github.event.pull_request.merged }}
     runs-on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
     steps:
       - name: Check out
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
           token: "${{ secrets.PERSONAL_ACCESS_TOKEN }}"
+          ref: main
       - id: cz
         name: Create bump and changelog
         uses: commitizen-tools/commitizen-action@master
