--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "nats-jwt"
 version = "0.1.0"
-description = "JWT tokens signed using NKeys for Ed25519 for the Python3 ecosystem"
+description = "NATS JWT tokens signed using NKeys for the Python3 ecosystem"
 authors = ["Seznam.cz, a.s. <cdn.vyvoj@firma.seznam.cz>"]
 license = "Apache-2.0"
 readme = "README.md"
