--- a/.github/workflows/bump_version.yaml
+++ b/.github/workflows/bump_version.yaml
@@ -1,26 +1,30 @@
 on:
   push:
     branches:
-      - release
+      - main
 
 name: Bump version and create changelog
 
 jobs:
-  bump_version:
+  bump-version:
+    if: "!startsWith(github.event.head_commit.message, 'bump:')"
     runs-on: ubuntu-latest
     name: "Bump version and create changelog with commitizen"
     steps:
       - name: Check out
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
         with:
-          fetch-depth: 0
           token: "${{ secrets.PERSONAL_ACCESS_TOKEN }}"
-          ref: main
-      - id: cz
-        name: Create bump and changelog
+          fetch-depth: 0
+      - name: Create bump
         uses: commitizen-tools/commitizen-action@master
-        continue-on-error: true
         with:
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-      - name: Print Version
-        run: echo "Bumped to version ${{ steps.cz.outputs.version }}"
+          changelog_increment_filename: body.md
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          body_path: "body.md"
+          tag_name: ${{ env.REVISION }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
