--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ commitizen = ">=3.15.0"
 name = "cz_conventional_commits"
 version_provider = "poetry"
 tag_format = "v$version"
-bump_message = "🔖 version $current_version → $new_version [release]"
+bump_message = "bump: 🔖 version $current_version → $new_version [release]"
 update_changelog_on_bump = true
 annotated_tag = true
 
